# GTX-970-3.5GB-Fix

./: CMakeLists.txt  GTX970Fix.json  README.md  layer.cpp  main.cpp
.github/workflows/: windows_build.yml
